--- a/writingsAPI.yaml
+++ b/writingsAPI.yaml
@@ -111,7 +111,7 @@ components:
             example: thisIsAText
           date:
             type: string
-            example: 29-12-2023
+            example: Thu Aug 31 2023 19:26:02 GMT+0200 (Mitteleuropäische Sommerzeit)
       WritingsInput:
         type: object
         required:
@@ -123,4 +123,4 @@ components:
             example: thisIsAText
           date:
             type: string
-            example: 29-12-2023
+            example: Thu Aug 31 2023 19:26:02 GMT+0200 (Mitteleuropäische Sommerzeit)
