--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "watch": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "web-push": "web-push"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.8.1",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "web-push": "^3.6.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
