--- a/writingsAPI.yaml
+++ b/writingsAPI.yaml
@@ -5,6 +5,7 @@ info:
   version: 1.0.0
 servers:
   - url: 'https://localhost:3000'
+  - url: 'https://ikt-writingsapi.onrender.com/'
 paths:
   /writing:
     get:
